# PERIS

./: .env.example  .gitignore  CLAUDE.md  CLAUDE2.md  README.md  cli.py  electron-builder.config.js  package-lock.json  package.json  requirements.txt  scheduler.py  thesis.txt
overnight-desk/: .env.example  .gitignore  README.md  pyproject.toml
overnight-desk/api/: main.py  schemas.py
overnight-desk/backtest/: engine.py  experiment.py  experiment_wave2.py  experiment_wave3.py  metrics.py  run.py
overnight-desk/briefing/: ticket.py
overnight-desk/configs/: baseline.yaml  model.yaml  sp500.yaml  tradingagents.yaml
overnight-desk/core/: __init__.py  calendar.py  config.py  env.py  lake.py  paths.py  universe.py
overnight-desk/features/: build.py  calendar_features.py  common.py  fracdiff.py  fundamentals.py  labels.py  macro_regime.py  pead.py  residual_momentum.py  reversal.py  signature.py  spillover.py  trend.py  turbulence.py  volume_liquidity.py
overnight-desk/ingestion/: base.py  build_sp500_universe.py  check_keys.py  curate.py  edgar_client.py  finnhub_client.py  fred_client.py  fundamentals.py  run.py  stooq_client.py  tiingo_client.py  yahoo_client.py
overnight-desk/jobs/: install_tradingagents_desk.sh  make_desk_icon.py  nightly.py  run_nightly.sh  run_tradingagents_desk.sh
overnight-desk/ledger/: db.py
overnight-desk/llm/: ollama_client.py
overnight-desk/models/: experiment_wave1.py  experiment_wave4.py  experiment_wave5.py  experiment_wave6.py  fallback.py  meta.py  predict.py  regime.py  registry.py  train.py  walkforward.py
(+100 files in other folders)
